@@ -4,7 +4,7 @@ include $(TOP)/mk/config.mk
 
 MAIN = ProfileViewer.hs
 
-APPNAME = viewProfile
+APPNAME = profileviewer
 
 NEEDPACKAGES = gtk2 mogul glade
 
